tests/spec/non_conformant/errors/invalid_operation/gte.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation/gte.hrx"



// Ignoring "test", error tests are not supported yet.
